# core-android

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  build.gradle
gradle/wrapper/: gradle-wrapper.properties
src/: AndroidManifest.xml  CMakeLists.txt  build.gradle
src/core-android/: CMakeLists.txt  core.cc  core.h  logging.cc
src/core-android/message_handlers/: handshake_handler.cc  handshake_handler.h
src/daemon/: CMakeLists.txt  main.cc
src/tests/: CMakeLists.txt
